--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,12 @@
-body{margin:0;background:#000}canvas{width:100%}video{display:none}
+body {
+  margin: 0;
+  background: black;
+}
+
+canvas {
+  width: 100%;
+}
+
+video {
+  display: none;
+}
